Fixed for people icon
- Fixed profile icon position being too low;
- Fixed profile icon changing titlebar area height.

--- a/Profile Folder/chrome/partials/chrome/chrome-5/_toolbars.scss
+++ b/Profile Folder/chrome/partials/chrome/chrome-5/_toolbars.scss
@@ -826,10 +826,11 @@ toolbar[overflowable][customizing] > .customization-target {
 	padding: 0 !important;
 	margin-inline-start: 3px !important;
 	margin-inline-end: 1px !important;
+	height: var(--tab-height);
 
 	.toolbarbutton-badge-stack {
 		background: transparent !important;
-		margin-block-end: -2px;
+		margin-block-end: 7px;
 	}
 
 	.toolbarbutton-badge-stack > vbox,
